Revision history for Test-WWW-Mechanize

WWW::Mechanize and Test::WWW::Mechanize do not use rt.cpan.org for
bug tracking.  They are now being tracked via GitHub at
https://github.com/petdance/test-www-mechanize/issues


1.45_02 Mon Jul 11 15:10:00 CDT 2016
------------------------------------
[ENHANCEMENTS]
Added a lacks_header() method to go with header_exists().


1.45_01 Sat Jul  9 00:03:42 CDT 2016
------------------------------------
[ENHANCEMENTS]
Added a delete_ok() method.  Thanks, moznion.

Added header_exists() and header_matches() methods.  Thanks, Eric
A. Zarko.

content_contains() now fails if it's called with a regex.  content_like()
now fails if it's not called with a regex.


[FIXES]
The test server run during the test suite allowed URLs outside of the
document tree, which could potentially be a security problem.  This has
been fixed.  Thanks, Tynovsky.
https://github.com/petdance/test-www-mechanize/issues/33


1.44    Sat Jun 30 20:32:04 CDT 2012
------------------------------------
There is no new functionality in this release.

[FIXES]
Fixed test failures on Win32.  Thanks, Jerry Gay.


1.42    Thu May 31 11:35:26 CDT 2012
------------------------------------
If you want to use the autolint functionality, you'll have to have
HTML::Lint 2.20.

[FIXES]
Custom lint objects don't get reset before they get used, making
autolint with a custom lint object practically useless.
https://github.com/petdance/test-www-mechanize/issues/25


1.40    Fri Apr 13 15:14:39 CDT 2012
------------------------------------
[ENHANCEMENTS]
Added a $mech->autolint() method so you can turn autolinting on and off
in mid-program.  Thanks, Mike O'Regan.

New functions $mech->scrape_text_by_id() and $mech->scrape_text_by_attr()
let you extract text from your pages.  Convenience function
$mech->scraped_id_is() makes it easy to scrape and compare in one
function.

    <h1 id="pagetitle">My Awesome Page!</h1>

    # Verify that HTML is there with: