@@ -1677,16 +1677,12 @@ sub scraped_id_is {
         $msg = qq{scraped id "$id" is "$what"};
     }
 
-    local $Test::Builder::Level = $Test::Builder::Level + 1;
-
     my $got = $self->scrape_text_by_id($id);
-    is( $got, $expected, $msg );
-
-    return;
+    return $TB->is_eq( $got, $expected, $msg );
 }
 
 
-=head2 $mech->header_exists( $field [, $desc ] )
+=head2 $mech->header_exists( $header [, $desc ] )
 
 Assures that a given response header exists. The actual value of the response header is not checked, only that the header exists.
 
@@ -1694,61 +1690,71 @@ Assures that a given response header exists. The actual value of the response he
 
 sub header_exists {
     my $self = shift;
-    my $field = shift;
-    my $desc = shift || qq{Response has $field header};
+    my $header = shift;
+    my $desc = shift || qq{Response has $header header};
 
-    my $ok = defined($self->response->header($field));
-
-    $TB->ok( $ok, $desc );
-    if ( !$ok ) {
-        $TB->diag( HTTP::Headers::as_string($self->response) ) if $self->response;
-    }
-
-    return $ok;
+    return $TB->ok( defined($self->response->header($header)), $desc );
 }
 
 
-=head2 $mech->lacks_header( $field [, $desc ] )
+=head2 $mech->lacks_header( $header [, $desc ] )
 
 Assures that a given response header does NOT exist.
 
 =cut
 
 sub lacks_header {
-    my $self  = shift;
-    my $field = shift;
-    my $desc  = shift || qq{Response lacks $field header};
+    my $self   = shift;
+    my $header = shift;
+    my $desc   = shift || qq{Response lacks $header header};
 
-    my $ok = !defined($self->response->header($field));
+    return $TB->ok( !defined($self->response->header($header)), $desc );
+}
 
-    $TB->ok( $ok, $desc );
+
+=head2 $mech->header_is( $header, $value [, $desc ] )
+
+Assures that a given response header exists and has the given value.
+
+=cut
+
+sub header_is {
+    my $self   = shift;
+    my $header = shift;
+    my $value  = shift;
+    my $desc   = shift || qq{Response has $header header with value "$value"};
+
+    # Force scalar context.
+    my $actual_value = $self->response->header($header);
+
+    my $ok;
+    if ( defined( $actual_value ) ) {
+        $ok = $TB->is_eq( $actual_value, $value, $desc );
+    }
+    else {
+        $ok = $TB->ok( 0, $desc );
+        $TB->diag( "Header $header does not exist" );
+    }
 
     return $ok;
 }
 
 
-=head2 $mech->header_matches( $field, $value [, $desc ] )
+=head2 $mech->header_like( $header, $value [, $desc ] )
 
-Assures that a given response header exists and has the given value.  Value may be a string or a regular expression.
+Assures that a given response header exists and has the given value.
 
 =cut
 
-sub header_matches {
-    my $self = shift;
-    my $field = shift;
-    my $value = shift;
-    my $desc = shift || qq{Response has $field header with value '$value'};
+sub header_like {
+    my $self   = shift;
+    my $header = shift;
+    my $regex  = shift;
+    my $desc   = shift || qq{Response has $header header that matches regex $regex};
 
-    my $actual_value = scalar $self->response->header($field);
-    my $ok = (ref($value) eq 'Regexp')
-       ? defined($actual_value) && ($actual_value =~ $value)
-       : defined($actual_value) && ($actual_value eq $value);
-
-    $TB->ok( $ok, $desc );
-    if ( !$ok ) {
-        $TB->diag( $self->response->header($field) ) if $self->response;
-    }
-    return $ok;
+    # Force scalar context.
+    my $actual_value = $self->response->header($header);
+    return $TB->like( $self->response->header($header), $regex, $desc );
 }
 
 
